--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
 	%head
 		%meta{:charset => "utf-8"}
 		%title= @title
-		%link{:rel => "stylesheet", :href => "/css/site.css?v=1.1"}
+		%link{:rel => "stylesheet", :href => "/css/site.css?v=1.2"}
 	%body
 		.page
 			%header
@@ -16,11 +16,10 @@
 					- else
 						%strong
 							&nbsp;
-				%h1 Timelogger
+				%h1 Crolog
 			%section
 				= yield
 			%footer
 				.text-align-right
-					%a{:href => "https://github.com/dibikhin/timelogger"} GitHub
+					%a{:href => "https://github.com/dibikhin"} GitHub
 					%a{:href => "http://twitter.com/dibikhin"} Twitter
-					%a{:href => "mailto:dibikhin@gmail.com?Subject=Timelogger"} E-mail
